--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,12 @@
   height: 40vmin;
   pointer-events: none;
 }
-body {
+html {
   width: 100%;
   height: 100%;
-  background: linear-gradient(300deg, red, black);
+}
+body {
+  background: linear-gradient(300deg, rgb(96, 158, 177), rgb(227, 118, 231));
   background-repeat: no-repeat;
   background-size: cover;
 }
